@@ -121,6 +121,7 @@ typedef struct {
     int extended_iso_min;                            // extended iso minimum
     int extended_iso_max;                            // extended iso maximum
     pslr_jpeg_image_tone_t max_supported_image_tone; // last supported jpeg image tone
+    bool has_jpeg_hue;                               // camera has jpeg hue setting
     ipslr_status_parse_t parser_function;            // parse function for status buffer
 } ipslr_model_info_t;
 
