@@ -2,8 +2,9 @@ version 0.82.03
 	More debug messages
 	jpeg contrast/hue/sharpness/saturation GUI bugfix
 	Image tone bugfix (thx Mike Protts)
-	Disable muted jpeg image tone for bugfix because it's not working correctly
+	Disable muted jpeg image tone for K-x because it's not working correctly
 	Android build fixes
+	Disable jpeg hue change for old cameras without jpeg hue setting
 
 version 0.82.02 ( 2015-06-28 )
 	--pentax_debug_mode ( thx Samo Penic )
